layout added at section G

--- a/Dotnet_Project/SubFormSectionC2.resx
+++ b/Dotnet_Project/SubFormSectionC2.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label5.Text" xml:space="preserve">
-    <value> IB05زبانی اجازت : ہم اس کمیونٹی کے گھرانوں میں ایک سروے کا انعقاد کر رہے ہیں تاکہ گلگت بلتستان کے کچھ علاقوں میں تولیدی معلومات ، نوزائیدہ بچوں کی صحت ، ہجرت کے طریقوں اور ٹیلیفون کی دستیابی کے بارے میں جان سکیں۔ اس انٹرویوکو مکمل ہونے میں تقریباً 15 منٹس لگیں گے۔آپ سے حاصل کردہ تمام معلومات ہمارے پاس انتہائی خفیہ اور گمنام رہیں گی (یعنی آپ کا نام یا آپ کے خاندان کے کسی فرد کا نام کبھی بھی ظاہر نہیں کیا جائے گا) اور ان کو مستقبل کے ریسرچ پروگرام میں آگاہی کے لئے استعمال کیا جائے گا ۔ کیا میں اب انٹرویو شروع کرسکتا/سکتی ہوں؟</value>
+  <data name="label4.Text" xml:space="preserve">
+    <value>IC08_گزشتہ5سالوں میں،ان میں سے ایسی کتنی خواتین تھیں(یعنی جن کے بچوں کی پیدائش ہوئی)ہو اور ان کو بچے کی پیدائش کے بعد پہلے 24 گھنٹوں کے دوران اندام نہانی سے خون کا غیر معمولی اخراج ہواہو؟ (مندرجہ ذیل مثالیں دے کر اشارہ دیں) • کیا خون کا اخراج اتنا زیادہ تھا کہ خون میٹرس/فلور جہاں پرزچگی ہوئی تھی جمع ہو گیا تھا؟ • کیا ماں کو خون کے اس اخراج کی وجہ سے علاج کروانا پڑا تھا ؟ • کیا بچے کی پیدائش کے بعد ماں کو خون لگوانے کی ضرورت پڑ گئی تھی؟ کیا اس بچے کی پیدائش کے بعد ماں کو پوسٹ پارٹم ہیموریج(خون کے غیر معمولی اخراج) کی تشخیص ہوئی تھی؟</value>
   </data>
 </root>
