--- a/Dotnet_Project/SubFormSectionD.resx
+++ b/Dotnet_Project/SubFormSectionD.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label5.Text" xml:space="preserve">
-    <value> IB05زبانی اجازت : ہم اس کمیونٹی کے گھرانوں میں ایک سروے کا انعقاد کر رہے ہیں تاکہ گلگت بلتستان کے کچھ علاقوں میں تولیدی معلومات ، نوزائیدہ بچوں کی صحت ، ہجرت کے طریقوں اور ٹیلیفون کی دستیابی کے بارے میں جان سکیں۔ اس انٹرویوکو مکمل ہونے میں تقریباً 15 منٹس لگیں گے۔آپ سے حاصل کردہ تمام معلومات ہمارے پاس انتہائی خفیہ اور گمنام رہیں گی (یعنی آپ کا نام یا آپ کے خاندان کے کسی فرد کا نام کبھی بھی ظاہر نہیں کیا جائے گا) اور ان کو مستقبل کے ریسرچ پروگرام میں آگاہی کے لئے استعمال کیا جائے گا ۔ کیا میں اب انٹرویو شروع کرسکتا/سکتی ہوں؟</value>
+  <data name="label2.Text" xml:space="preserve">
+    <value>ID02_گزشتہ سال ایل ایچ ڈبلیو نے کتنی بار اس گھر کا دورہ کیا تھا؟ اگر جواب دہندہ کو صحیح تعداد کے بارے میں معلوم نہیں ہے تو ، یہ پوچھتے ہوئے فالو اپ کریں کہ کیا آپ اپنا بہترین اندازہ لگا کر دوروں کی صحیح تعدادبتا سکتی ہیں؟</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>ID03_گذشتہ سال ایل ایچ ڈبلیو کے گھر پر کئے گئے دوروں میں سے کتنے و دورے حاملہ گھریلو ممبر کی دیکھ بھال / خدمات سے متعلق تھے؟ اگر جواب دہندہ کو صحیح تعداد کے بارے میں معلوم نہیں ہے تو ، یہ پوچھتے ہوئے فالو اپ کریں کہ کیا آپ اپنا بہترین اندازہ لگا کر دوروں کی صحیح تعدادبتا سکتی ہیں</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>ID04_گذشتہ سال ایل ایچ ڈبلیو کے گھر پر کئے گئے دوروں میں سے کتنے و دورے بچے کی دیکھ بھال / خدمات سے متعلق تھے؟اگر جواب دہندہ کو صحیح تعداد کے بارے میں معلوم نہیں ہے تو ، یہ پوچھتے ہوئے فالو اپ کریں کہ کیا آپ اپنا بہترین اندازہ لگا کر دوروں کی صحیح تعدادبتا سکتی ہیں؟</value>
   </data>
 </root>
